[package]
name = "ppppl"
version = "0.1.0"
edition = "2018"
license = "MIT"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
rand = "0.8.4"
num-bigint = { version="0.4.0", features=["serde"] }
sqlite = "0.26.0"
serde = { version="1.0.127", features=["derive"] }
bincode = "1.3.3"
home = "0.5.3"
clap = "2.33.3"
